{
    "name": "InputController",
    "maps": [
        {
            "name": "Player",
            "id": "0e636a9a-3a69-4477-90cf-dbd9e6ecab1a",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "74af08fe-9856-4137-91ac-53d4d857614a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "60c2a69e-86cc-4c57-8731-25ddf549e9ae",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Esc",
                    "type": "Button",
                    "id": "9e0fe360-fb5e-4a6f-8f79-9b167c3c6f50",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Scroll",
                    "type": "Button",
                    "id": "bddb264d-70b1-419a-84e3-46b387a37f18",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "eddb1db8-b5a4-47cd-89d4-d575080b20d7",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "502f5958-3dbc-40ca-b347-c9ceb3e15c08",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a9515cb9-e14d-4f14-9ebc-7f844987002f",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Esc",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "84816308-46da-4145-87b1-8b90fdf11acd",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Camera",
            "id": "27554557-31cf-41f1-bc28-2269d760e0ea",
            "actions": [
                {
                    "name": "StartMovingAround",
                    "type": "Button",
                    "id": "4e75bed6-8677-4cec-bb8e-afcf1ac5cc67",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveAround",
                    "type": "PassThrough",
                    "id": "646a9a6a-a56d-4bee-a83c-3962b6ff93f6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fc8f94a3-d817-4603-beca-de8880689c68",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartMovingAround",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fceeac42-7b1f-41c1-9116-470520cbf4d4",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveAround",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "e7d6cddd-e3ef-4113-a5ac-4fe38ebd413f",
            "actions": [
                {
                    "name": "OpenClose instructions",
                    "type": "Button",
                    "id": "360dfd1b-e7ff-44b8-95bf-99271a6d164f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenClose dialogue",
                    "type": "Button",
                    "id": "e257ff4c-6fda-44e4-b2f5-69802f06d8ec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "df37f5b1-865a-4961-91f7-cc1b91663366",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenClose instructions",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "454ed87e-9fc9-4bdc-b8c2-67773de16a62",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenClose dialogue",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}